--- a/lockswapaquarius/index.html
+++ b/lockswapaquarius/index.html
@@ -75,7 +75,7 @@
       <!-- Swap (Aquarius AMM Router) -->
       <div class="section box" id="swapBox">
         <h2>Swap (Aquarius AMM Router)</h2>
-        <p class="small">Swap any Stellar token you hold into <b>AQUAm25</b> via Aquarius AMMs (multi-hop). Type either how much you’ll <b>send</b> or how much AQUAm25 you want to <b>receive</b>. If you don’t have an AQUAm25 trustline yet, we’ll add it atomically before the swap (uses ~1 XLM reserve).</p>
+        <p class="small">Swap any Stellar token you hold into <b>AQUAm25</b> via Aquarius AMMs (multi-hop). Type either how much you’ll <b>send</b> or how much AQUAm25 you want to <b>receive</b>. If you don’t have an AQUAm25 trustline yet, add it first (uses ~1 XLM reserve).</p>
 
         <!-- Mode -->
         <div class="row" style="gap:10px;margin:4px 0 8px;">
@@ -125,6 +125,8 @@
           <button id="swapSignSubmit">Sign &amp; Submit (current wallet)</button>
           <button id="swapSignOnly" class="ghost">Sign (don’t submit)</button>
           <button id="swapCopy" class="ghost">Copy XDR</button>
+          <!-- New: trustline helper -->
+          <button id="btnAddTrustline" class="ghost">Add AQUAm25 Trustline</button>
         </div>
 
         <p class="small" id="swapQuote" style="margin-top:6px" aria-live="polite"></p>
@@ -278,7 +280,8 @@
           btnModeSend=$("btnModeSend"), btnModeRecv=$("btnModeRecv"),
           btnValidate=$("btnValidate"), btnQuote=$("btnQuote"),
           contractsBox=$("contractsBox"), validationBox=$("validationBox"),
-          quoteBox=$("quoteBox");
+          quoteBox=$("quoteBox"),
+          btnAddTrustline=$("btnAddTrustline");
 
     // ---------- State ----------
     let connectionMode="none"; // 'none' | 'wc' | 'freighter'
@@ -298,29 +301,15 @@
     let quoteMode="send";
     let lastIsSend=true;
 
-// ---------- Soroban RPC (SDK v14 UMD) ----------
-let _soro = null;
-function rpc() {
-  if (_soro) return _soro;
-
-  // Primary (correct for v14 UMD)
-  const RpcServer = window.StellarSdk?.rpc?.Server;
-  if (RpcServer) {
-    _soro = new RpcServer(sorobanRpcUrl, { allowHttp: false });
-    return _soro;
-  }
-
-  // Fallback (older builds that used SorobanRpc namespace)
-  const LegacyServer = window.StellarSdk?.SorobanRpc?.Server;
-  if (LegacyServer) {
-    _soro = new LegacyServer(sorobanRpcUrl, { allowHttp: false });
-    return _soro;
-  }
-
-  throw new Error(
-    "Soroban RPC client not found on StellarSdk. Ensure @stellar/stellar-sdk UMD v14.x is loaded before this script."
-  );
-}
+    // ---------- Soroban RPC (SDK 14.3.0) ----------
+    let _soro = null;
+    function rpc() {
+      if (_soro) return _soro;
+      const Server = window.StellarSdk?.SorobanRpc?.Server;
+      if (!Server) throw new Error("SorobanRpc unavailable from StellarSdk (check SDK 14.3.0 tag).");
+      _soro = new Server(sorobanRpcUrl, { allowHttp: false });
+      return _soro;
+    }
 
     // Cache for issuer -> domain
     const DOMAIN_CACHE = new Map();
@@ -332,7 +321,6 @@ function rpc() {
     const toNativeLabel = asset => (asset.isNative && asset.isNative()) ? "XLM" : (asset.code || (asset.getCode ? asset.getCode() : "asset"));
     const plain = (v) => { const s=String(v); if(!/e/i.test(s)) return s; const n=Number(v); return n.toFixed(7).replace(/\.?0+$/,''); };
     function toast(msg, err=false){ statusEl.textContent = msg; statusEl.style.color = err ? "#ff6b6b" : ""; }
-
     function contractId(asset){ return asset.contractId(NETWORK); }
 
     // ---------- Connection UI ----------
@@ -698,7 +686,7 @@ Lock end (UTC):   ${end.toLocaleString(undefined,{timeZone:'UTC'})}`;
 
         if(pubkey){
           const tl = await hasTrustline(pubkey, tokenOut);
-          bits.push(tl ? `<div class="pill ok">Trustline: OK for output asset</div>` : `<div class="pill warn">No trustline for output asset (will add automatically)</div>`);
+          bits.push(tl ? `<div class="pill ok">Trustline: OK for output asset</div>` : `<div class="pill warn">No trustline for output asset — click “Add AQUAm25 Trustline”</div>`);
         } else {
           bits.push(`<div class="pill">Connect to check trustline</div>`);
         }
@@ -829,7 +817,7 @@ Lock end (UTC):   ${end.toLocaleString(undefined,{timeZone:'UTC'})}`;
       }
     }
 
-    // ---------- Build Soroban swap tx (with optional atomic trustline) ----------
+    // ---------- Build Soroban swap tx (NO inline trustline) ----------
     async function buildSorobanSwapTx({
       account,          // G...
       isSend,           // true -> swap_chained, false -> swap_chained_strict_receive
@@ -839,30 +827,29 @@ Lock end (UTC):   ${end.toLocaleString(undefined,{timeZone:'UTC'})}`;
       swapChainXdr,     // base64 ScVal from Aquarius API
       addTrustlineFirst // boolean
     }){
+      // If trustline missing, stop here with explicit guidance.
+      if (addTrustlineFirst) {
+        throw new Error("Missing AQUAm25 trustline. Click “Add AQUAm25 Trustline” first, then retry the swap.");
+      }
+
       const server = rpc();
       const acc = await server.getAccount(account);
-
       const c = new SDK.Contract(routerContractId);
       const fn = isSend ? "swap_chained" : "swap_chained_strict_receive";
 
-// v14 UMD: use Address + nativeToScVal instead of scVal helpers
-const acctAddr     = SDK.Address.fromString(account).toScVal();
-const swapChainVal = SDK.xdr.ScVal.fromXDR(swapChainXdr, "base64");
-const tokenInAddr  = SDK.Address.fromString(tokenIn.contractId(NETWORK)).toScVal();
-const inU128       = SDK.nativeToScVal(BigInt(inAmountStroops), { type: "u128" });
-const limitU128    = SDK.nativeToScVal(BigInt(limitOutOrExact), { type: "u128" });
+      const swapOp = c.call(
+        fn,
+        SDK.scVal.toAddress(account),
+        SDK.xdr.ScVal.fromXDR(swapChainXdr, "base64"),
+        SDK.scVal.toAddress(tokenIn.contractId(NETWORK)),
+        SDK.scVal.toU128(inAmountStroops.toString()),
+        SDK.scVal.toU128(limitOutOrExact.toString())
+      );
 
-const swapOp = c.call(fn, acctAddr, swapChainVal, tokenInAddr, inU128, limitU128);
-
-      let tb = new SDK.TransactionBuilder(acc, { fee: "20000", networkPassphrase })
-        .setTimeout(300);
-
-      // Optional atomic trustline to AQUAm25
-      if (addTrustlineFirst) {
-        tb = tb.addOperation(SDK.Operation.changeTrust({ asset: AQUAm25 }));
-      }
-
-      let tx = tb.addOperation(swapOp).build();
+      let tx = new SDK.TransactionBuilder(acc, { fee: "20000", networkPassphrase })
+        .setTimeout(300)
+        .addOperation(swapOp)
+        .build();
 
       try {
         tx = await server.prepareTransaction(tx);
@@ -880,6 +867,52 @@ const swapOp = c.call(fn, acctAddr, swapChainVal, tokenInAddr, inU128, limitU128
 
       return tx;
     }
+
+    // ---------- Classic trustline helper ----------
+    async function buildTrustlineXDR(pk){
+      const src = await getServer().loadAccount(pk);
+      const tx = new SDK.TransactionBuilder(src, { fee: "10000", networkPassphrase: NETWORK })
+        .addOperation(SDK.Operation.changeTrust({ asset: AQUAm25 }))
+        .setTimeout(180)
+        .build();
+      return tx.toXDR();
+    }
+
+    on(btnAddTrustline, "click", async ()=>{
+      try{
+        const pk = pubkeyEl.value.trim();
+        if(!isValidG(pk)) { toast("Connect a wallet first.", true); return; }
+
+        if(await hasTrustline(pk, AQUAm25)){
+          toast("AQUAm25 trustline already exists.");
+          return;
+        }
+
+        toast("Preparing trustline transaction…");
+        const trustXdr = await buildTrustlineXDR(pk);
+
+        toast("Signing trustline…");
+        const signed = await signCurrent(trustXdr);
+
+        toast("Submitting trustline…");
+        const hash = await submitToHorizon(signed);
+
+        toast(`Trustline added ✓ tx: ${hash}`);
+        // Refresh balances / UI
+        await initForNewAccount();
+
+        // If user had a quote, rebuild XDR automatically
+        try {
+          if (lastQuote) {
+            if (lastIsSend) await quoteStrictSend();
+            else            await quoteStrictReceive();
+          }
+        } catch(_) {}
+      }catch(e){
+        console.error(e);
+        toast(e.message || "Trustline add failed.", true);
+      }
+    });
 
     // Submit Soroban
     async function submitToSoroban(signedXdr){
