--- a/lockswapaquarius/index.html
+++ b/lockswapaquarius/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-freighter-api/5.0.0/index.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <!-- Stellar SDK (UMD v14.3.0 non-min) — exposes SorobanRpc -->
-<script src="https://cdn.jsdelivr.net/npm/@stellar/stellar-sdk@14.3.0/dist/stellar-sdk.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/stellar-sdk@14.3.0/dist/stellar-sdk.js" crossorigin="anonymous"></script>
 
   <style>
     :root { --bg:#0b0f12; --panel:#12181d; --ink:#e8f0f6; --muted:#94a3ad; --accent:#4fd1c5; --err:#ff6b6b; --ok:#57d29a; --border:#1c242c; }
@@ -233,6 +233,9 @@
 
     // ---------- Shortcuts ----------
     const SDK = window.StellarSdk;
+    // Debug check — confirm SDK + SorobanRpc are available
+    console.log("SDK version:", SDK?.version, "SorobanRpc?", !!SDK?.SorobanRpc?.Server);
+    
     if(!SDK) throw new Error("Stellar SDK failed to load.");
     const ServerCtor = SDK.Server || (SDK.Horizon && SDK.Horizon.Server);
     if(!ServerCtor) throw new Error("Stellar SDK: Server constructor not found.");
