--- a/lockswapaquarius/index.html
+++ b/lockswapaquarius/index.html
@@ -8,17 +8,15 @@
   <!-- Freighter API (UMD) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-freighter-api/5.0.0/index.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <!-- Stellar SDK (UMD v14.3.0 non-min) — exposes SorobanRpc -->
-<script src="https://cdn.jsdelivr.net/npm/@stellar/stellar-sdk@14.3.0/dist/stellar-sdk.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>
-  // Fallback to unpkg if jsDelivr fails
-  if (!window.StellarSdk) {
-    var s = document.createElement('script');
-    s.src = "https://unpkg.com/@stellar/stellar-sdk@14.3.0/dist/stellar-sdk.js";
-    s.crossOrigin = "anonymous";
+  <!-- Stellar SDK (UMD v14.3.0) — includes SorobanRpc -->
+<script src="https://cdn.jsdelivr.net/npm/@stellar/stellar-sdk@14.3.0/dist/stellar-sdk.js" crossorigin="anonymous" referrerpolicy="no-referrer" onerror="
+  (function(){
+    var s=document.createElement('script');
+    s.src='https://unpkg.com/@stellar/stellar-sdk@14.3.0/dist/stellar-sdk.js';
+    s.crossOrigin='anonymous';
     document.head.appendChild(s);
-  }
-</script>
+  })();
+"></script>
 
   <style>
     :root { --bg:#0b0f12; --panel:#12181d; --ink:#e8f0f6; --muted:#94a3ad; --accent:#4fd1c5; --err:#ff6b6b; --ok:#57d29a; --border:#1c242c; }
@@ -240,14 +238,22 @@
     import SignClient from "https://esm.sh/@walletconnect/sign-client@2.21.8";
     import QRCode     from "https://esm.sh/qrcode@1.5.3";
 
-    // ---------- Shortcuts ----------
+// ---------- Shortcuts (wait for UMD to be ready) ----------
+async function waitForStellarSdk(timeoutMs = 4000) {
+  const t0 = Date.now();
+  while (Date.now() - t0 < timeoutMs) {
     const SDK = window.StellarSdk;
-    // Debug check — confirm SDK + SorobanRpc are available
-    console.log("SDK version:", SDK?.version, "SorobanRpc?", !!SDK?.SorobanRpc?.Server);
-    
-    if(!SDK) throw new Error("Stellar SDK failed to load.");
-    const ServerCtor = SDK.Server || (SDK.Horizon && SDK.Horizon.Server);
-    if(!ServerCtor) throw new Error("Stellar SDK: Server constructor not found.");
+    if (SDK?.SorobanRpc?.Server) return SDK;
+    await new Promise(r => setTimeout(r, 50));
+  }
+  throw new Error("Stellar SDK (UMD) didn't load in time.");
+}
+
+const SDK = await waitForStellarSdk();
+console.log("SDK version:", SDK.version, "SorobanRpc?", !!SDK.SorobanRpc?.Server);
+
+const ServerCtor = SDK.Server || (SDK.Horizon && SDK.Horizon.Server);
+if (!ServerCtor) throw new Error("Stellar SDK: Server constructor not found.");
 
     // ---------- Config ----------
     const HORIZON    = "https://horizon.stellar.org";
